--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,19 +10,19 @@ services:
       - ./data/namenode:/usr/local/hadoop/data/nameNode
       - ./hadoop-3.3.6.tar.gz:/tmp/hadoop-3.3.6.tar.gz
     ports:
-      - "9870:9870"
-      - "9000:9000"
-      - "2222:22"    # Map the SSH port
+      - "9870:9870"  # HDFS Web UI
+      - "9000:9000"  # HDFS
+      - "2222:22"    # SSH
     environment:
       - HDFS_NAMENODE_USER=root
       - HDFS_DATANODE_USER=root
       - HDFS_SECONDARYNAMENODE_USER=root
       - HDFS_CONF_dfs_replication=1
       - JAVA_HOME=/usr/local/openjdk-8
-      - HADOOP_VERSION=3.3.6   # Define HADOOP_VERSION here
+      - HADOOP_VERSION=3.3.6
     command: ["/usr/local/hadoop/start-hadoop.sh"]
-    privileged: true           # Add this line to run with elevated permissions
-    ulimits:                   # Add ulimits configuration
+    privileged: true
+    ulimits:
       nproc: 65535
       nofile:
         soft: 65535
@@ -40,17 +40,46 @@ services:
     depends_on:
       - namenode
     ports:
-      - "2223:22"    # Map the SSH port
+      - "2223:22"    # SSH
     environment:
       - HDFS_NAMENODE_USER=root
       - HDFS_DATANODE_USER=root
       - HDFS_SECONDARYNAMENODE_USER=root
       - JAVA_HOME=/usr/local/openjdk-8
-      - HADOOP_VERSION=3.3.6   # Define HADOOP_VERSION here
+      - HADOOP_VERSION=3.3.6
     command: ["/usr/local/hadoop/start-hadoop.sh"]
-    privileged: true           # Add this line to run with elevated permissions
-    ulimits:                   # Add ulimits configuration
+    privileged: true
+    ulimits:
       nproc: 65535
       nofile:
         soft: 65535
         hard: 65535
+
+  spark-master:
+    build:
+      context: .
+      dockerfile: Dockerfile.spark
+    container_name: spark-master
+    hostname: spark-master
+    ports:
+      - "8080:8080"  # Spark Master Web UI
+      - "7077:7077"  # Spark Master
+    environment:
+      - SPARK_MODE=master
+      - SPARK_MASTER_PORT=7077
+      - SPARK_MASTER_WEBUI_PORT=8080
+    volumes:
+      - ./spark-3.4.3-bin-hadoop3.tgz:/tmp/spark-3.4.3-bin-hadoop3.tgz
+
+  spark-worker:
+    build:
+      context: .
+      dockerfile: Dockerfile.spark
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_WEBUI_PORT=8081
+    volumes:
+      - ./spark-3.4.3-bin-hadoop3.tgz:/tmp/spark-3.4.3-bin-hadoop3.tgz
