--- a/Dockerfile.hadoop
+++ b/Dockerfile.hadoop
@@ -15,6 +15,9 @@ RUN ssh-keygen -t rsa -P '' -f /root/.ssh/id_rsa && cat /root/.ssh/id_rsa.pub >>
 # Disable StrictHostKeyChecking
 RUN echo "    StrictHostKeyChecking no" >> /etc/ssh/ssh_config
 
+# Create hdfs user and supergroup group
+RUN groupadd supergroup && useradd -g supergroup hdfs && useradd dr.who && usermod -a -G supergroup dr.who
+
 # Copy local Hadoop tarball and install
 COPY hadoop-3.3.6.tar.gz /tmp/
 RUN tar -xzvf /tmp/hadoop-3.3.6.tar.gz -C /usr/local/ \
